# music_ai

./: .dockerignore  .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/web/: next.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/web/public/: audio-capture-processor.js
apps/web/scripts/: prepare-standalone.mjs
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/coach/: route.test.ts  route.ts
apps/web/src/components/: MicrophoneCheckDialog.test.tsx  MicrophoneCheckDialog.tsx  PracticeWorkbench.tsx
apps/web/src/lib/: analysis.test.ts  analysis.ts  audio.test.ts  audio.ts  capture.test.ts  capture.ts  captureSignal.test.ts  captureSignal.ts  coachClient.test.ts  coachClient.ts  coachProtocol.test.ts  coachProtocol.ts  coachServer.test.ts  coachServer.ts  mgg.test.ts  mgg.ts  microphoneCheck.test.ts  microphoneCheck.ts  microphonePreference.test.ts  microphonePreference.ts  transport.test.ts  transport.ts
apps/web/src/test/: coachTestkit.ts
companions/mgg-helper/: Cargo.toml  LICENSE  NOTICE  README.md
companions/mgg-helper/src/: error.rs  lib.rs  main.rs  musicex.rs  ogg.rs  process.rs  qmc2.rs  qqmusic.rs  secure_io.rs
deploy/: .env.production.example  Caddyfile  Dockerfile.control-plane  Dockerfile.web  compose.production.yaml  run-control-plane.py
docs/: deployment.md
docs/adr/: 0001-system-architecture.md  0002-contract-versioning.md  0003-scoring-semantics.md  0004-control-plane-data-lifecycle.md  0005-ingest-reference-quality.md  0006-authoritative-scoring-service.md  0007-constrained-coach-provider.md  0008-production-deployment.md  0009-live-llm-and-mgg-intake.md
models/registry/: README.md  models.json  registry.schema.json
reports/web-dogfood/: report.md
services/coach/: README.md  pyproject.toml
services/coach/src/music_ai_coach/: __init__.py  gateways.py  policy.py  providers.py  rendering.py  service.py  types.py
services/coach/tests/: coach_testkit.py  test_gateway.py  test_openai_gateway.py  test_policy.py  test_service.py
services/control-plane/: README.md  alembic.ini  pyproject.toml
services/control-plane/migrations/: env.py
services/control-plane/migrations/versions/: 0001_initial_control_plane.py
services/control-plane/src/music_ai_control_plane/: __init__.py  __main__.py  api.py  config.py  database.py  maintenance.py  media_intake.py  models.py  provision.py  schemas.py  security.py  service.py  storage.py
services/control-plane/tests/: conftest.py  control_plane_factories.py  control_plane_testkit.py  test_api.py  test_deployment.py  test_foundations.py  test_media_intake.py  test_migrations.py  test_operations.py
services/ingest-worker/: README.md  pyproject.toml
services/ingest-worker/src/music_ai_ingest/: __init__.py  artifacts.py  model_gate.py  pipeline.py  policy.py  providers.py  publisher.py  types.py
services/ingest-worker/tests/: ingest_testkit.py  test_artifacts.py  test_control_plane_integration.py  test_model_gate.py  test_pipeline.py  test_policy.py  test_publisher.py
services/scoring/: README.md  pyproject.toml
services/scoring/src/music_ai_scoring_service/: __init__.py  audio.py  calibration.py  pipeline.py  policy.py  providers.py  publisher.py  serialization.py  types.py
services/scoring/tests/: scoring_service_testkit.py  test_audio.py  test_calibration.py  test_control_plane_integration.py  test_pipeline.py  test_policy.py  test_publisher.py
