[project]
name = "music-ai-workspace"
version = "0.1.0"
description = "Development workspace for the music_ai singing coach"
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = [
    "jsonschema>=4.26,<5",
    "pytest>=9.1,<10",
    "ruff>=0.15,<0.16",
]

[tool.uv.workspace]
members = ["packages/contracts/python"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["packages"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
