[project]
name = "music-ai-workspace"
version = "0.1.0"
description = "Development workspace for the music_ai singing coach"
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = [
    "httpx2>=2.5,<3",
    "jsonschema>=4.26,<5",
    "pytest>=9.1,<10",
    "pyyaml>=6.0,<7",
    "ruff>=0.15,<0.16",
]

[tool.uv.workspace]
members = [
    "packages/contracts/python",
    "packages/model-runtime",
    "packages/scoring-core",
    "services/coach",
    "services/control-plane",
    "services/ingest-worker",
    "services/scoring",
]

[tool.pytest.ini_options]
addopts = "-ra --import-mode=importlib"
pythonpath = [
    "packages/scoring-core/tests",
    "services/control-plane/tests",
    "services/coach/tests",
    "services/ingest-worker/tests",
    "services/scoring/tests",
]
testpaths = ["packages", "services"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
