[package]
name = "music-ai-mgg-helper"
version = "0.1.0"
edition = "2021"
description = "Optional local macOS MusicEx MGG to Ogg companion for music_ai"
license = "GPL-3.0-only"
publish = false

[[bin]]
name = "music-ai-mgg-helper"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
plist = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tc_tea = "0.1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "time"] }
zeroize = "1"
