[project]
name = "music-ai-coach"
version = "0.1.0"
description = "Constrained rule and LLM coaching over immutable music_ai scores"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx2>=2.5,<3",
    "music-ai-contracts",
    "pydantic>=2.12,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/music_ai_coach"]

[tool.uv.sources]
music-ai-contracts = { workspace = true }
