[project]
name = "music-ai-control-plane"
version = "0.1.0"
description = "Tenant-safe API and privacy lifecycle for music_ai"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.16,<2",
    "fastapi>=0.116,<1",
    "music-ai-contracts",
    "psycopg[binary]>=3.2,<4",
    "pydantic-settings>=2.10,<3",
    "sqlalchemy>=2.0.41,<3",
    "uvicorn>=0.35,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/music_ai_control_plane"]

[tool.uv.sources]
music-ai-contracts = { workspace = true }
