[project]
name = "music-ai-ingest"
version = "0.1.0"
description = "Fail-closed offline reference analysis for music_ai"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx2>=2.5,<3",
    "music-ai-contracts",
    "pydantic>=2.12,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/music_ai_ingest"]

[tool.uv.sources]
music-ai-contracts = { workspace = true }
